--- a/Weboldal/Főoldal/fooldal.css
+++ b/Weboldal/Főoldal/fooldal.css
@@ -100,7 +100,7 @@ strong{
 }
 
 .ajánlások{
-  background-color: black;
+  background-color: black; /*hogy látszódjon hogy meddig ér a kép*/
   height: 20px;
   margin: auto;
 }
