--- a/Weboldal/Lőszer/loszer.css
+++ b/Weboldal/Lőszer/loszer.css
@@ -78,40 +78,40 @@
 .navbar-brand{
   color: white;
 }
-
-#ajánló{
-color: white;
-margin-left: 30px;
-margin-top: 30%; /*Itt meég lehet rajta pár dolgot állytani */
+.card1{
+  border: 3px solid #C14A17;  /* 2px vastag, fekete színű keret */
+  padding: 10px;  /* Extra tér a szöveg körül */
+  background-color: #232323;
+  color: white;
+  
 }
-
-strong{
-font-size: 400%;
+.card2{
+  border: 3px solid #C14A17;  /* 2px vastag, fekete színű keret */
+  padding: 10px;  /* Extra tér a szöveg körül */
+  background-color: #232323;
+  color: white;
+  
 }
-
-#vásárolj_gomb{
-background-color: #C14A17;
-width: 15%;
-height: 40px;
-font-size: 150%;
-text-align: center;
-border-radius: 20px;
-margin-top: 1%;
+.card3{
+  border: 3px solid #C14A17;  /* 2px vastag, fekete színű keret */
+  padding: 10px;  /* Extra tér a szöveg körül */
+  background-color: #232323;
+  color: white;
+  
 }
-
-.ajánlások{
-background-color: black; /*hogy látszódjon hogy meddig ér a kép*/
-height: 20px;
-margin: auto;
+.card4{
+  border: 3px solid #C14A17;  /* 2px vastag, fekete színű keret */
+  padding: 10px;  /* Extra tér a szöveg körül */
+  background-color: #232323;
+  color: white;
+  
 }
-
-footer{
-background-color: #232323;
-height: 30%;
-margin-top: 20px;
-padding-top: 10px;
+.loszerek{
+  display: flex;
+  justify-content: center;
 }
-
-#footer_content{
-
+.kartyak{
+  display: flex;
+  justify-content: center;
+  padding: 50px;
 }
