--- a/Weboldal/Pisztoly/pisztoly.css
+++ b/Weboldal/Pisztoly/pisztoly.css
@@ -2,8 +2,76 @@
     background-color: #232323;
 }
 .navbar{
-    background-color: #232323;
+    background-position: center !important; /* A kép középre igazítva */
+    background-repeat: no-repeat !important; /* A kép nem ismétlődik */
+    height: 80px !important; /* Navbar magassága */
+    background-color: rgba(255, 255, 255, 0) !important;
+    border-bottom: 3px solid #D9D9D9;
 }
+.navbar a{
+    font-size: 30px !important;
+    margin-left: 20px !important;
+}
+.navbar .navbar-nav {
+    display: flex !important;
+    align-items: center !important;
+    justify-content: center !important;
+    flex-wrap: wrap; /* Ha nem fér el, törjön új sorba */
+    gap: 5vw; /* A fix 200px helyett, így a kijelző méretéhez igazodik */
+  }
+  @media (max-width: 992px) { /* Tabletek és mobilok */
+    .navbar .navbar-nav {
+      flex-direction: column; /* A menüpontok egymás alá kerülnek */
+      align-items: center;
+      gap: 10px; /* Kisebb távolság a menüpontok között */
+    }
+  
+    .navbar-brand img {
+      width: 50px; /* Kisebb ikonméretek */
+    }
+  }
+  
+  @media (max-width: 768px) { /* Telefonok */
+    .navbar {
+      height: auto !important;
+    }
+  
+    .navbar-toggler {
+      display: block; /* A hamburger menü megjelenítése */
+    }
+  
+    .navbar-nav {
+      width: 100%;
+      text-align: center;
+    }
+  
+    .logo {
+      height: 50px !important;
+    }
+  }
+  @media (max-width: 768px) {
+    .body {
+      background-size: contain; /* Kisebb kijelzőkhöz optimalizált háttér */
+    }
+  }
+.logo{
+    border-radius: 10% !important; /* A kép lekerekítése */
+    height: 70px !important; /* A kép magassága */
+    }
+.kosarlogo{
+    width: 80%;
+}
+.kedvenclogo{
+    width: 67%;
+}
+.navbar-nav {
+    display: flex;
+    margin: auto;
+}
+.navbar-brand{
+    color: white;
+}
+
 .kosarlogo{
     width: 50%;
 }
@@ -54,5 +122,14 @@
     text-align: left;
     
 }
-
+.kosar{
+  width: 100;
+  height: auto;
+  text-align: right;
+}
+.kedvencek{
+  width: 20;
+  height: auto;
+  text-align: right;
+}
 
