--- a/Weboldal/Kapcsolat/kapcsolatok.css
+++ b/Weboldal/Kapcsolat/kapcsolatok.css
@@ -79,4 +79,19 @@
 }
 .szoveg{
   color: white;
+  display: flex;
+  justify-content: center;
+  height: 100vh;
+  text-align: center;
+  margin-top: 100px;
+  font-size: 1.5em;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.container{
+  display: flex;
+  align-items: flex-start;
+  height: 200px;
+  border: 1px black;
+  justify-content: flex-start;
+  margin-top: 100px;
 }
