--- a/Weboldal/Pisztoly/pisztoly.css
+++ b/Weboldal/Pisztoly/pisztoly.css
@@ -95,10 +95,10 @@
     display: block;
     }
     .ár{
-        text-align: center;
+        text-align: left;
     }
     .nev{
-        text-align: center;
+        text-align: left;
     }
     .haromkep{
         display: flex;
@@ -118,18 +118,25 @@
 .desert{
     margin-right: 50px;
 }
-.h4{
-    text-align: left;
-    
-}
 .kosar{
-  width: 100;
+  width: 50px;
   height: auto;
-  text-align: right;
+  margin-right: 50px;
+ 
 }
 .kedvencek{
-  width: 20;
+  width: 60px;
   height: auto;
-  text-align: right;
+  margin-top: 10px;
+  margin-right: 50px;
+  
 }
+#kozosdoboz{
+  justify-content: start;
+  align-items: center;
+  display: flex;
+  margin-top: 30px;
+  margin-right: 100px;
+}
+
 
