--- a/Weboldal/Lőszer/loszer.css
+++ b/Weboldal/Lőszer/loszer.css
@@ -103,10 +103,15 @@
 }
 .nev1{
   margin-top: 30px;
+  margin-right: 100px;
 }
 .nev2{
   margin-top: 73px;
 }
 .nev3{
   margin-top: 73px;
+}
+.kosar{
+  width: 50px;
+  margin-left: 130px;
 }
