--- a/Weboldal/Főoldal/fooldal.css
+++ b/Weboldal/Főoldal/fooldal.css
@@ -111,3 +111,13 @@ footer{
   padding-top: 10px;
 }
 
+.szoveg1{
+  margin: 75px;
+  margin-top: -220px;
+}
+
+.fooldal-ár{
+  margin: 2px;
+  margin-top: 40px;
+  color: white;
+}
