--- a/Weboldal/Főoldal/fooldal.css
+++ b/Weboldal/Főoldal/fooldal.css
@@ -116,8 +116,14 @@ footer{
   margin-top: -220px;
 }
 
-.fooldal-ár{
+.fooldal-ár1{
   margin: 2px;
   margin-top: 40px;
   color: white;
+}
+
+.piros-ár1{
+  color: red;
+  margin: 200px;
+  margin-top: -47px;
 }
