--- a/Weboldal/Főoldal/fooldal.css
+++ b/Weboldal/Főoldal/fooldal.css
@@ -130,27 +130,31 @@ footer{
 
 .szoveg2{
   margin: 430px;
-  margin-top: -380px;
+  margin-top: -375px;
   color: white;
 }
 
 .fooldal-ár2{
   margin: 2px;
   margin-top: 40px;
+  color: white;
 }
 
 .piros-ár2{
   color: red;
-  margin: 178px;
+  margin: 180px;
   margin-top: -47px;
+  white-space: nowrap;
 }
 
 .szoveg3{
-  color: white;
   margin: 430px;
-  margin-top: -435px;
+  margin-top: -360px;
 }
 
 .fooldal-ár3{
-  display: flex;
+  margin: 2px;
+  margin-top: 40px;
+  color: white;
+  white-space: nowrap;
 }
