kész az elso sziv

--- a/Weboldal/Pisztoly/pisztoly.css
+++ b/Weboldal/Pisztoly/pisztoly.css
@@ -94,11 +94,11 @@
     }
     .ár{
         text-align: left;
-        font-size:x-large;
+        font-size:large;
     }
     .nev{
         text-align: left;
-        font-size: larger;
+        font-size: xx-large;
     }
     .haromkep{
         display: flex;
@@ -125,15 +125,19 @@
 
 }
 .egybe{
- 
+ margin-left: 60px;
+ white-space: nowrap;
 }
 .kosar{
-  width: 35%;
+  width: 45px;
   height: auto;
 }
 
 .kedvencek{
-  width: 45px;
+  width: 55px;
   height: auto;
   
+}
+.szöveg{
+  white-space: nowrap;
 }
