--- a/fooldal.css
+++ b/fooldal.css
@@ -1,5 +1,5 @@
 .body{
-    background-image: url('../IKT-projekt/Weboldal/Képek/fooldalhatter.png');
+    background-image: url('/Weboldal/Képek/fooldalhatter.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
