kedvencek oldallal haladás

--- a/Weboldal/kedvencek/kedvencek.css
+++ b/Weboldal/kedvencek/kedvencek.css
@@ -83,10 +83,29 @@
 }
 .rect {
   width: 200px; /* A téglalap szélessége */
-  height: 250px; /* A téglalap magassága, vékony legyen */
-  background-color: #C14A17; /* A szín kódja */
+  height: 300px; /* A téglalap magassága, vékony legyen */
+  background-color: transparent; /* Átlátszó háttér */
+  border: 2px solid #c14a17; /* Lássuk a körvonalat */
   margin: 5%;
-  margin-top: 10%;
+  margin-top: 15%;
+}
+.kisrect{
+  width: 150px; /* A téglalap szélessége */
+  height: 150px; /* A téglalap magassága, vékony legyen */
+  background-color: lightgray;
+  margin: 23px;
+}
+
+.fegyvernev{
+  color: white;
+  margin: 32px;
+  margin-top: -10px;
+}
+
+.fegyverar{
+  color: white;
+  margin: 82px;
+  margin-top: -25px;
 }
 
 .kosarlogo{
@@ -97,4 +116,14 @@
 .kedvenclogo{
   margin-top: -890px;
   margin: 400px;
+}
+
+.kep{
+  margin: 60px;
+}
+
+.kisx{
+  transform: scale(0.3);
+  margin: 20px;
+  margin-top: -450px;
 }
