üres kedvencek oldal létrehozása

--- a/Weboldal/kedvencek/ureskedvencek.css
+++ b/Weboldal/kedvencek/ureskedvencek.css
@@ -81,50 +81,13 @@
   top: 0;
   right: 0;
 }
-.rect {
-  width: 200px; /* A téglalap szélessége */
-  height: 300px; /* A téglalap magassága, vékony legyen */
-  background-color: transparent; /* Átlátszó háttér */
-  border: 2px solid #c14a17; /* Lássuk a körvonalat */
-  margin: 5%;
-  margin-top: 15%;
-  border-radius: 10%;
-}
-.kisrect{
-  width: 150px; /* A téglalap szélessége */
-  height: 150px; /* A téglalap magassága, vékony legyen */
-  background-color: lightgray;
-  margin: 25px;
-}
-
-.fegyvernev{
-  color: white;
-  margin: 32px;
-  margin-top: -10px;
-}
-
-.fegyverar{
-  color: white;
-  margin: 82px;
-  margin-top: -25px;
-}
-
-.kosarlogo{
-  margin: 1000px;
-  margin-top: 10px;
-}
-
-.kedvenclogo{
-  margin-top: -890px;
-  margin: 400px;
-}
-
-.kep{
-  margin: 60px;
-}
-
-.kisx{
-  transform: scale(0.25);
-  margin: 140px;
-  margin-top: -445px;
-}
+#bongeszes{
+    background-color: #C14A17;
+    width: 15%;
+    height: 40px;
+    font-size: 150%;
+    text-align: center;
+    border-radius: 20px;
+    margin-top: 1%;
+    text-shadow: none;
+  }
